--- a/404.html
+++ b/404.html
@@ -133,57 +133,109 @@ var text;
 switch (Math.ceil(Math.random() * 15)) {
     default:
     // Jebaited x 12 GWA GWA GWA
-        var str = "Together Forever";
+        var str = "Rick Astley - Together Forever";
         var result = str.link("https://sss");
         break;
     // Every other song :D Maybe I'll add a hundred for a nice pool of songs.
     case 1:
-        var str = "A Day in the Life";
-        var result = str.link("https://sss");
+        str = "The Beatles - A Day in the Life";
+        result = str.link("https://sss");
         break;
     case 2:
-        var str = "Hello Goodbye";
-        var result = str.link("https://sss");
+        str = "The Beatles - Hello Goodbye";
+        result = str.link("https://sss");
         break;
     case 3:
-        var str = "She Loves You";
-        var result = str.link("https://sss");
+        str = "The Beatles - She Loves You";
+        result = str.link("https://sss");
         break;
     case 4:
-        var str = "Eleanor Rigby";
-        var result = str.link("https://sss");
+        str = "The Beatles - Eleanor Rigby";
+        result = str.link("https://sss");
         break;
     case 5:
-        var str = "Here Comes The Sun";
-        var result = str.link("https://sss");
+        str = "The Beatles - Here Comes The Sun";
+        result = str.link("https://sss");
         break;
     case 6:
-        var str = "Hey Jude";
-        var result = str.link("https://sss");
+        str = "The Beatles - Hey Jude";
+        result = str.link("https://sss");
         break;
     case 7:
-        var str = "Yellow Submarine";
-        var result = str.link("https://sss");
+        str = "The Beatles - Yellow Submarine";
+        result = str.link("https://sss");
         break;
     case 8:
-        var str = "Twist and Shout";
-        var result = str.link("https://sss");
+        str = "The Beatles - Twist and Shout";
+        result = str.link("https://sss");
         break;
     case 9:
-        var str = "Come Together";
-        var result = str.link("https://sss");
+        str = "The Beatles - Come Together";
+        result = str.link("https://sss");
         break;
     case 10:
-        var str = "I Me Mine";
-        var result = str.link("https://sss");
+        str = "The Beatles - I Me Mine";
+        result = str.link("https://sss");
         break;
     case 11:
-        var str = "Woman";
-        var result = str.link("https://sss");
+        str = "John Lennon - Woman";
+        result = str.link("https://sss");
         break;
     case 12:
-        var str = "Woman";
-        var result = str.link("https://sss");
+        str = "John Lennon - Imagine";
+        result = str.link("https://sss");
+        break;
+    case 13:
+        str = "Queen - Teo Torriatte";
+        result = str.link("https://sss");
+        break;
+    case 14:
+        str = "Queen - Seaside Rendezvous";
+        result = str.link("https://sss");
+        break;
+    case 15:
+        str = "Queen - Death on Two Legs";
+        result = str.link("https://sss");
+        break;
+    case 16:
+        str = "Queen - Bicycle Race";
+        result = str.link("https://sss");
+        break;
+    case 17:
+        str = "Queen - Innuendo";
+        result = str.link("https://sss");
+        break;
+    case 18:
+        str = "Queen - The March of the Black Queen";
+        result = str.link("https://sss");
+        break;
+    case 19:
+        str = "Queen - The Prophet's Song";
+        result = str.link("https://sss");
+        break;
+    case 20:
+        str = "Queen - '39";
+        result = str.link("https://sss");
+        break;
+    case 21:
+        str = "Queen - Melancholy Blues";
+        result = str.link("https://sss");
+        break;
+    case 22:
+        str = "Queen - The Show Must Go On";
+        result = str.link("https://sss");
+        break;
+    case 23:
+        str = "Queen - Made in Heaven";
+        result = str.link("https://sss");
+        break;
+    case 24:
+        str = "Queen - Don't Stop Me Now";
+        result = str.link("https://sss");
+        break;
+    case 25:
+        str = "Queen - It's a Hard Life";
+        result = str.link("https://sss");
         break;
 }
 document.getElementById("song").innerHTML = text;
