--- a/guides.html
+++ b/guides.html
@@ -134,8 +134,12 @@ a {
     </ul><br>
     <p style="color: darkgreen"><strong>Events</strong></p>
     <ul class="green">
-    <li>Birthday Bash (Anniversary/May)</li>
-    <li>Summer Cup (July)</li>
+    <li><a href="/frillyhearts/general">Frilly Heart Day (February)</a></li>
+    <li><a href="/birthdaybash/general">Birthday Bash (May)</a></li>
+    <li><a href="/summercup/general">Summer Cup (July)</a></li>
+    <li><a href="/voe/general">Valley of Ebil (October)</a></li>
+    <li><a href="/gobble/general">Gobblegeddon (November)</a></li>
+    <li><a href="/winteriscoming/general">NSWHEoC (December)</a></li>
     </ul>
     <center><img src="http://valleyofunicorns.com/images/horse_images/617.png" alt="Here is a Morning Glory Paae."></center><br><br>
   </div>
