--- a/404.html
+++ b/404.html
@@ -130,116 +130,234 @@ a {
     <p id="song">
 <script>
 var text;
-switch (Math.ceil(Math.random() * 15)) {
+var result;
+switch (Math.ceil(Math.random() * 52)) {
     default:
-    // Jebaited x 12 GWA GWA GWA
-        var str = "Rick Astley - Together Forever";
-        var result = str.link("https://sss");
+    // That troll song that I change quite a lot. 
+        str = "Africa";
+        result = str.link("https://sss");
         break;
     // Every other song :D Maybe I'll add a hundred for a nice pool of songs.
+    // The Beatles songs
     case 1:
-        str = "The Beatles - A Day in the Life";
+        str = "A Day in the Life";
         result = str.link("https://sss");
         break;
     case 2:
-        str = "The Beatles - Hello Goodbye";
+        str = "Hello Goodbye";
         result = str.link("https://sss");
         break;
     case 3:
-        str = "The Beatles - She Loves You";
+        str = "She Loves You";
         result = str.link("https://sss");
         break;
     case 4:
-        str = "The Beatles - Eleanor Rigby";
+        str = "Eleanor Rigby";
         result = str.link("https://sss");
         break;
     case 5:
-        str = "The Beatles - Here Comes The Sun";
+        str = "Here Comes The Sun";
         result = str.link("https://sss");
         break;
     case 6:
-        str = "The Beatles - Hey Jude";
+        str = "Hey Jude";
         result = str.link("https://sss");
         break;
     case 7:
-        str = "The Beatles - Yellow Submarine";
+        str = "Yellow Submarine";
         result = str.link("https://sss");
         break;
     case 8:
-        str = "The Beatles - Twist and Shout";
+        str = "Twist and Shout";
         result = str.link("https://sss");
         break;
     case 9:
-        str = "The Beatles - Come Together";
+        str = "Come Together";
         result = str.link("https://sss");
         break;
     case 10:
-        str = "The Beatles - I Me Mine";
+        str = "I Me Mine";
         result = str.link("https://sss");
         break;
     case 11:
-        str = "John Lennon - Woman";
+        str = "Woman";
         result = str.link("https://sss");
         break;
     case 12:
-        str = "John Lennon - Imagine";
+        str = "Imagine";
         result = str.link("https://sss");
         break;
+    // Queen songs
     case 13:
-        str = "Queen - Teo Torriatte";
+        str = "Teo Torriatte";
         result = str.link("https://sss");
         break;
     case 14:
-        str = "Queen - Seaside Rendezvous";
+        str = "Seaside Rendezvous";
         result = str.link("https://sss");
         break;
     case 15:
-        str = "Queen - Death on Two Legs";
+        str = "Death on Two Legs";
         result = str.link("https://sss");
         break;
     case 16:
-        str = "Queen - Bicycle Race";
+        str = "Bicycle Race";
         result = str.link("https://sss");
         break;
     case 17:
-        str = "Queen - Innuendo";
+        str = "Innuendo";
         result = str.link("https://sss");
         break;
     case 18:
-        str = "Queen - The March of the Black Queen";
+        str = "The March of the Black Queen";
         result = str.link("https://sss");
         break;
     case 19:
-        str = "Queen - The Prophet's Song";
+        str = "The Prophet's Song";
         result = str.link("https://sss");
         break;
     case 20:
-        str = "Queen - '39";
+        str = "'39";
         result = str.link("https://sss");
         break;
     case 21:
-        str = "Queen - Melancholy Blues";
+        str = "Melancholy Blues";
         result = str.link("https://sss");
         break;
     case 22:
-        str = "Queen - The Show Must Go On";
+        str = "The Show Must Go On";
         result = str.link("https://sss");
         break;
     case 23:
-        str = "Queen - Made in Heaven";
+        str = "Made in Heaven";
         result = str.link("https://sss");
         break;
     case 24:
-        str = "Queen - Don't Stop Me Now";
+        str = "Don't Stop Me Now";
         result = str.link("https://sss");
         break;
     case 25:
-        str = "Queen - It's a Hard Life";
+        str = "It's a Hard Life";
+        result = str.link("https://sss");
+        break;
+    case 26:
+        str = "One Vision";
+        result = str.link("https://sss");
+        break;
+    case 27:
+        str = "Bohemian Rhapsody";
+        result = str.link("https://sss");
+        break;
+    case 28:
+        str = "Sheer Heart Attack";
+        result = str.link("https://sss");
+        break;
+    case 29:
+        str = "I Want It All";
+        result = str.link("https://sss");
+        break;
+    // ABBA songs
+    case 30:
+        str = "Eagle";
+        result = str.link("https://sss");
+        break;
+    case 31:
+        str = "I Wonder (Departure)";
+        result = str.link("https://sss");
+        break;
+    case 32:
+        str = "If It Wasn't For The Nights";
+        result = str.link("https://sss");
+        break;
+    case 33:
+        str = "Lay All Your Love On Me";
+        result = str.link("https://sss");
+        break;
+    case 34:
+        str = "Angeleyes";
+        result = str.link("https://sss");
+        break;
+    case 34:
+        str = "Happy New Year";
+        result = str.link("https://sss");
+        break;
+    case 35:
+        str = "Summer Night City";
+        result = str.link("https://sss");
+        break;
+    case 36:
+        str = "I'm a Marionette";
+        result = str.link("https://sss");
+        break;
+    case 37:
+        str = "Thank You For The Music";
+        result = str.link("https://sss");
+        break;
+    case 38:
+        str = "When I Kissed The Teacher";
+        result = str.link("https://sss");
+        break;
+    case 39:
+        str = "The Name of the Game";
+        result = str.link("https://sss");
+        break;
+    case 40:
+        str = "One Man, One Woman";
+        result = str.link("https://sss");
+        break;
+    case 41:
+        str = "Voulez-Vous";
+        result = str.link("https://sss");
+        break;
+    case 42:
+        str = "Take a Chance On Me";
+        result = str.link("https://sss");
+        break;
+    case 43:
+        str = "Super Trouper";
+        result = str.link("https://sss");
+        break;
+    case 44:
+        str = "Dancing Queen";
+        result = str.link("https://sss");
+        break;
+    case 45:
+        str = "Under Attack";
+        result = str.link("https://sss");
+        break;
+    case 46:
+        str = "Head over Heels";
+        result = str.link("https://sss");
+        break;
+    case 47:
+        str = "Gimme! Gimme! Gimme!";
+        result = str.link("https://sss");
+        break;
+    case 48:
+        str = "The Winner Takes It All";
+        result = str.link("https://sss");
+        break;
+    case 49:
+        str = "Money, Money, Money";
+        result = str.link("https://sss");
+        break;
+    case 50:
+        str = "Mamma Mia";
+        result = str.link("https://sss");
+        break;
+    case 51:
+        str = "Fernando";
+        result = str.link("https://sss");
+        break;
+    case 52:
+        str = "Waterloo";
         result = str.link("https://sss");
         break;
 }
+// Look, ABBA's one of my favorites so I had to include so many of their songs :D
 document.getElementById("song").innerHTML = text;
 document.getElementById("song").innerHTML = result;
+// I'm not very good with JS :p But hey, at least I don't overuse if else statements...
 </script></p>
     <h2 style="color: green">404 Error</h2>
     </center>
